--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Add-user-group-configuration/add-usergroupconfiguration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Add-user-group-configuration/add-usergroupconfiguration.component.html
@@ -1,7 +1,22 @@
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
-      <h4 class="page-title">{{title}}</h4>
+      
+      <div class="col d-flex justify-content-between align-items-center">
+
+        <h4 class="page-title">{{title}}</h4>
+  
+        <div class="back-icon" style="margin-right: 10px;">
+  
+          <a href="javascript:void(0);" onclick="history.back();">
+  
+            <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+  
+          </a>
+  
+        </div>
+  
+      </div>
     </div>
   </div>
   <div class="row p-2">
@@ -11,7 +26,7 @@
         
           <div class="form-group row">
             <label for="usergroupname" class="col-sm-2 col-form-label"
-              >User Group Name</label
+              >User Group Name<span style="color: red; font-weight: bolder;">*</span></label
             >
             <div class="col-sm-10">
               <input
@@ -31,7 +46,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="code" class="col-sm-2 col-form-label">User Group Code</label>
+            <label for="code" class="col-sm-2 col-form-label">User Group Code<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <input
                 type="text"
@@ -52,7 +67,7 @@
           </div>
           <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label"
-              >Users</label
+              >Users<span style="color: red; font-weight: bolder;">*</span></label
             >
             <div class="col-sm-10">
              
@@ -86,7 +101,7 @@
           </div>
           
           <div class="form-group row">
-            <label for="prefix" class="col-sm-2 col-form-label">Total Users</label>
+            <label for="prefix" class="col-sm-2 col-form-label">Total Users<span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <input
                 type="number"
