--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Department/add-department.component.html
@@ -1,7 +1,22 @@
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
-      <h4 class="page-title">Add Department Configuration</h4>
+      
+      <div class="col d-flex justify-content-between align-items-center">
+
+        <h4 class="page-title">Add Department Configuration</h4>
+  
+        <div class="back-icon" style="margin-right: 10px;">
+  
+          <a href="javascript:void(0);" onclick="history.back();">
+  
+            <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+  
+          </a>
+  
+        </div>
+  
+      </div>
     </div>
   </div>
   <div class="row p-2">
@@ -11,7 +26,7 @@
         <div class="p-4 bg-white shadow-dark rounded-2">
 
           <div class="form-group row">
-            <label for="departmentName" class="col-sm-2 col-form-label">Department Name</label>
+            <label for="departmentName" class="col-sm-2 col-form-label">Department Name<span style="color: red; font-weight: bolder;">*</span> </label>
             <div class="col-sm-10">
               <input type="text"
                      class="form-control"
@@ -28,7 +43,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="DepartmentCode" class="col-sm-2 col-form-label">Department Code</label>
+            <label for="DepartmentCode" class="col-sm-2 col-form-label">Department Code <span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <input type="text"
                      class="form-control"
@@ -45,7 +60,7 @@
           </div>
           </div>
           <div class="form-group row">
-            <label for="Comments" class="col-sm-2 col-form-label">Comments</label>
+            <label for="Comments" class="col-sm-2 col-form-label">Comments <span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <textarea class="form-control"
                         id="Comments"
