--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
@@ -1,69 +1,52 @@
-<!--<div class="card shadow mb-4" style="padding-top: 2px;">
-  <div class="card-header py-3">
-    <div col-6 style="float: left;">
-      <h6 class="m-0 font-weight-bold text-primary">User Group Configuration</h6>
-    </div>
-    <div col-6 style="float: right;">
-      <button class="btn btn-primary" type="button" (click)="addusergroup()">
-        Add
-      </button>
-    </div>
-  </div>
-  <div class="card-body">
-    <div class="table-responsive">
-      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" >-->
-<!--*ngIf="types?.length>0"-->
-<!--<thead>
-          <tr>
-            <th scope="col">S.No</th>
-            <th scope="col">User Group Name</th>
-            <th scope="col">Unique Code</th>
-            <th scope="col">Total users</th>
-            <th scope="col">Status</th>
-            <th scope="col">Modify</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let doc of types; let i=index">
-            <th scope="row">{{i+1}}</th>
-            <td>{{doc?.usergroupname}}</td>
-            <td>{{doc?.code}}</td>
-            <td>{{doc?.users}}</td>
-            <td>Success</td>
-            <td>
-              <button class="btn" data-toggle="modal" data-target="#exampleModal"
-                      data-backdrop="static" data-keyboard="false">
-                <span class="fa fa-edit"></span>
-              </button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div *ngIf="types?.length==0">
-      <p>No items to display</p>
-    </div>
-  </div>
-</div>-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <div class="container-fluid">
   <div class="row p-2">
-    <div class="col">
+      <div class="col">
+          <div class="d-flex justify-content-between align-items-center">
+            <h4 class="page-title flex-grow-1">User Group Configuration</h4>
 
-      <div class="d-flex justify-content-between align-items-center">
-        <h4 class="page-title flex-grow-1">User Group Configuration</h4>
-        <div class="d-flex page-title-actions">
-          <input type="text" class="form-control" placeholder="Search">
-          <button class="btn btn-primary mx-2" type="button" (click)="addusergroup()" *ngIf="access">New</button>
-        </div>
+              <div class="back-icon" style="margin-right: 10px;">
+                  <a href="javascript:void(0);" onclick="history.back();">
+                      <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+                  </a>
+              </div>
+              
+              <div class="d-flex page-title-actions">
+                  <div class="input-group custom-input-group">
+                      <!-- Magnifying glass icon -->
+                      <span class="input-group-text custom-input-group-text">
+                          <i class="fas fa-search custom-search-icon"></i>
+                      </span>
+                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                  </div>
+                    
+                  <button class="btn btn-primary mx-2" type="button" (click)="addusergroup()" *ngIf="access">New</button>
+              </div>
+          </div>
       </div>
-    </div>
   </div>
   <div class="row p-2">
-    <div class="col">
-      <div class="p-4 bg-white shadow-dark rounded-2">
-        <p-table [value]="types" tableStyleClass="table table-striped" [rows]="itemsPerPage"
+      <div class="col">
+          <div class="p-4 bg-white shadow-dark rounded-2">
+            <p-table #templatesTable
+            [value]="types"
+            [globalFilterFields]="['usergroupname', 'code', 'registeredby','registeredon','totalusers','Status']"
+            tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="types.length"
             [rowsPerPageOptions]="rowsPerPageOptions" [(first)]="currentPage">
           <ng-template pTemplate="header">
@@ -98,9 +81,90 @@
             </tr>
           </ng-template>
         </p-table>
+          </div>
       </div>
-    </div>
   </div>
 </div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<style>
+
+  /* Styles for .custom-input-group */
+
+  .custom-input-group {
+
+      background-color: white;
+
+      display: flex;
+
+      align-items: center;
+
+      border: 1px solid #ccc;
+
+      border-radius: 5px;
+
+  }
+
+  .custom-input-group-text {
+
+          background: white;
+
+          border: none;
+
+          padding: 0;
+
+          vertical-align: middle;
+
+      }
+
+
+
+      .custom-search-icon {
+
+          font-size: 14px;
+
+          margin-right: 5px;
+
+          margin-left: 9px;
+
+          color: #555;
+
+      }
+
+
+
+      .custom-input {
+
+          border: none;
+
+          padding: 5px;
+
+          vertical-align: middle;
+
+          background-color: white;
+
+          box-shadow: none;
+
+      }
+
+  </style>
