--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
@@ -2,7 +2,22 @@
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
-      <h4 class="page-title">{{title}}</h4>
+      
+      <div class="col d-flex justify-content-between align-items-center">
+
+        <h4 class="page-title">{{title}}</h4>
+  
+        <div class="back-icon" style="margin-right: 10px;">
+  
+          <a href="javascript:void(0);" onclick="history.back();">
+  
+            <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+  
+          </a>
+  
+        </div>
+  
+      </div>
     </div>
   </div>
   <div class="row p-2">
