--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
@@ -1,38 +1,43 @@
+
 <div class="container-fluid">
     <div class="row p-2">
         <div class="col">
-           
             <div class="d-flex justify-content-between align-items-center">
                 <h4 class="page-title flex-grow-1">Document Revision</h4>
+
                 <div class="back-icon" style="margin-right: 10px;">
                     <a href="javascript:void(0);" onclick="history.back();">
                         <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
                     </a>
                 </div>
+                
                 <div class="d-flex page-title-actions">
-                    <div class="input-group">
-                        <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" />
-                        <span class="input-group-text"><i class="fas fa-search"></i></span>
-                      </div>
-                  
-                  <!-- <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()">New</button> -->
+                    <div class="input-group custom-input-group">
+                        <!-- Magnifying glass icon -->
+                        <span class="input-group-text custom-input-group-text">
+                            <i class="fas fa-search custom-search-icon"></i>
+                        </span>
+                        <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                    </div>
+                      
+                    
                 </div>
-              </div>
+            </div>
         </div>
     </div>
     <div class="row p-2">
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
-            <p-table #templatesTable [value]="revisionDatasource" tableStyleClass="table table-striped" [rows]="itemsPerPage"
+                <p-table #templatesTable [value]="revisionDatasource" tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="revisionDatasource.length"
             [rowsPerPageOptions]="rowsPerPageOptions" >
                 <ng-template pTemplate="header">
                     <tr>
                         <th>S.No</th>
                         <th pSortableColumn="atid" style="width:20%">Request Code<p-sortIcon field="atid"></p-sortIcon></th>                        
-                        <th pSortableColumn="documentTitle" style="width:10%">Document Title <p-sortIcon field="documentTitle"></p-sortIcon></th>
-                        <th pSortableColumn="documentno" style="width:10%">Document No. <p-sortIcon field="documentno"></p-sortIcon></th>
-                        <th pSortableColumn="documentType" style="width:10%">Document type <p-sortIcon field="documentType"></p-sortIcon></th>
+                        <th pSortableColumn="documentTitle" style="width:10%">Document Title<p-sortIcon field="documentTitle"></p-sortIcon></th>
+                        <th pSortableColumn="documentno" style="width:10%">Document No<p-sortIcon field="documentno"></p-sortIcon></th>
+                        <th pSortableColumn="documentType" style="width:10%">Document Type <p-sortIcon field="documentType"></p-sortIcon></th>
                         <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
                         <th pSortableColumn="effectiveDate" style="width:20%">Effective Date<p-sortIcon field="effectiveDate"></p-sortIcon></th>
                         <th pSortableColumn="reviewDate" style="width:200px">Review Date <p-sortIcon field="reviewDate"></p-sortIcon></th>
@@ -63,7 +68,53 @@
                     </tr>
                 </ng-template>
             </p-table>
+            </div>
         </div>
     </div>
-    </div>
-</div>  
+</div>
+
+<style>
+    /* Styles for .custom-input-group */
+    .custom-input-group {
+        background-color: white;
+        display: flex;
+        align-items: center;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+    .custom-input-group-text {
+            background: white;
+            border: none;
+            padding: 0;
+            vertical-align: middle;
+        }
+
+        .custom-search-icon {
+            font-size: 14px;
+            margin-right: 5px;
+            margin-left: 9px;
+            color: #555;
+        }
+
+        .custom-input {
+            border: none;
+            padding: 5px;
+            vertical-align: middle;
+            background-color: white;
+            box-shadow: none;
+        }
+    </style>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
