--- a/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
@@ -1,94 +1,146 @@
 <div class="container-fluid">
   <div class="row p-2">
-    <div class="col">
-      <div class="d-flex justify-content-between align-items-center">
-        <h4 class="page-title flex-grow-1">Document Effective</h4>
-        <div class="back-icon" style="margin-right: 10px;">
-          <a href="javascript:void(0);" onclick="history.back();">
-              <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-          </a>
-      </div>
-        <div class="d-flex page-title-actions">
-          <div class="input-group">
-            <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
-            <span class="input-group-text"><i class="fas fa-search"></i></span>
+      <div class="col">
+          <div class="d-flex justify-content-between align-items-center">
+            <h4 class="page-title flex-grow-1">Document Effective</h4>
+
+              <div class="back-icon" style="margin-right: 10px;">
+                  <a href="javascript:void(0);" onclick="history.back();">
+                      <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+                  </a>
+              </div>
+              
+              <div class="d-flex page-title-actions">
+                  <div class="input-group custom-input-group">
+                      <!-- Magnifying glass icon -->
+                      <span class="input-group-text custom-input-group-text">
+                          <i class="fas fa-search custom-search-icon"></i>
+                      </span>
+                      <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                  </div>
+                    
+              </div>
           </div>
-          
-        </div>
       </div>
-    </div>
   </div>
   <div class="row p-2">
-    <div class="col">
-      <div class="p-4 bg-white shadow-dark rounded-2">
-        <p-table #templatesTable
-          [value]="effectivesDatasource"
-          [globalFilterFields]="['reqcode','documenttitle','documentnumber','documenttype','department','status']"
-          tableStyleClass="table table-striped" [rows]="itemsPerPage"
-            [paginator]="true" [totalRecords]="effectivesDatasource.length"
-            [rowsPerPageOptions]="rowsPerPageOptions"
-        >
-          <ng-template pTemplate="header">
-            <tr>
-              <th style="width: 60px">S.No</th>
-
-              <th pSortableColumn="requestCode" style="width: 10%">
-                Request Code<p-sortIcon field="requestCode"></p-sortIcon>
-              </th>
-              <th pSortableColumn="documentTitle" style="width: 20%">
-                Document Title <p-sortIcon field="documentTitle"></p-sortIcon>
-              </th>
-              <th pSortableColumn="documentNo" style="width: 10%">
-                Document No <p-sortIcon field="document No"></p-sortIcon>
-              </th>
-              <th pSortableColumn="documentType" style="width: 20%">
-                Document type <p-sortIcon field="documentType"></p-sortIcon>
-              </th>
-              <th pSortableColumn="department" style="width: 20%">
-                Department<p-sortIcon field="department"></p-sortIcon>
-              </th>
-              <th pSortableColumn="status" style="width: 200px">
-                Status <p-sortIcon field="status"></p-sortIcon>
-              </th>
-              <th class="text-center" style="width: 80px">Modify</th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-effective let-i="rowIndex">
-            <tr>
-              <td>{{ i + 1 }}</td>
-              <td>{{ effective.deid }}</td>
-              <td>{{ effective.documenttitle }}</td>
-              <td>{{ effective.documentno }}</td>
-              <td>{{ effective.documenttype }}</td>
-              <td>{{ effective.department }}</td>
-              <td>
-                <span
-                  class="status"
-                  [ngClass]="getStatusClass(effective['status'])"
-                  >{{ effective.status }}
-                </span>
-              </td>
-              <td class="text-center" *ngIf="access && effective?.status=='IN-PROGRESS'">
-                <a (click)="navigateToReviewEffective(effective)"
-                  ><i class="bi bi-arrow-right"></i
-                ></a>
-              </td>
-              <td class="text-center" *ngIf="!access">
-                <i class="bi bi-lock bi-lg" 
-                [ngClass]="{'text-primary':true}"
-                title="No Permissions">
-                </i>
-              </td>
-              <td class="text-center" *ngIf="access && islocked(effective?.status)">
-                <i class="bi bi-lock bi-lg" 
-                [ngClass]="{'text-primary':true}"
-                title="{{ 'Locked'}}">
-                </i>
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
+      <div class="col">
+          <div class="p-4 bg-white shadow-dark rounded-2">
+            <p-table #templatesTable
+            [value]="effectivesDatasource"
+            [globalFilterFields]="['reqcode','documenttitle','documentnumber','documenttype','department','status']"
+            tableStyleClass="table table-striped" [rows]="itemsPerPage"
+              [paginator]="true" [totalRecords]="effectivesDatasource.length"
+              [rowsPerPageOptions]="rowsPerPageOptions"
+          >
+            <ng-template pTemplate="header">
+              <tr>
+                <th style="width: 60px">S.No</th>
+  
+                <th pSortableColumn="requestCode" style="width: 10%">
+                  Request Code<p-sortIcon field="requestCode"></p-sortIcon>
+                </th>
+                <th pSortableColumn="documentTitle" style="width: 20%">
+                  Document Title<p-sortIcon field="documentTitle"></p-sortIcon>
+                </th>
+                <th pSortableColumn="documentNo" style="width: 10%">
+                  Document No<p-sortIcon field="document No"></p-sortIcon>
+                </th>
+                <th pSortableColumn="documentType" style="width: 20%">
+                  Document Type<p-sortIcon field="documentType"></p-sortIcon>
+                </th>
+                <th pSortableColumn="department" style="width: 20%">
+                  Department<p-sortIcon field="department"></p-sortIcon>
+                </th>
+                <th pSortableColumn="status" style="width: 200px">
+                  Status <p-sortIcon field="status"></p-sortIcon>
+                </th>
+                <th class="text-center" style="width: 80px">Modify</th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-effective let-i="rowIndex">
+              <tr>
+                <td>{{ i + 1 }}</td>
+                <td>{{ effective.deid }}</td>
+                <td>{{ effective.documenttitle }}</td>
+                <td>{{ effective.documentno }}</td>
+                <td>{{ effective.documenttype }}</td>
+                <td>{{ effective.department }}</td>
+                <td>
+                  <span
+                    class="status"
+                    [ngClass]="getStatusClass(effective['status'])"
+                    >{{ effective.status }}
+                  </span>
+                </td>
+                <td class="text-center" *ngIf="access && effective?.status=='IN-PROGRESS'">
+                  <a (click)="navigateToReviewEffective(effective)"
+                    ><i class="bi bi-arrow-right"></i
+                  ></a>
+                </td>
+                <td class="text-center" *ngIf="!access">
+                  <i class="bi bi-lock bi-lg" 
+                  [ngClass]="{'text-primary':true}"
+                  title="No Permissions">
+                  </i>
+                </td>
+                <td class="text-center" *ngIf="access && islocked(effective?.status)">
+                  <i class="bi bi-lock bi-lg" 
+                  [ngClass]="{'text-primary':true}"
+                  title="{{ 'Locked'}}">
+                  </i>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+          </div>
       </div>
-    </div>
   </div>
 </div>
+
+
+<style>
+  /* Styles for .custom-input-group */
+  .custom-input-group {
+      background-color: white;
+      display: flex;
+      align-items: center;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+  }
+  .custom-input-group-text {
+          background: white;
+          border: none;
+          padding: 0;
+          vertical-align: middle;
+      }
+
+      .custom-search-icon {
+          font-size: 14px;
+          margin-right: 5px;
+          margin-left: 9px;
+          color: #555;
+      }
+
+      .custom-input {
+          border: none;
+          padding: 5px;
+          vertical-align: middle;
+          background-color: white;
+          box-shadow: none;
+      }
+  </style>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
