--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
@@ -35,7 +35,7 @@
               <ng-template pTemplate="header">
                   <tr>
                       <th>S.No</th>
-                      <th pSortableColumn="edrId" style="width:20%">Request Code<p-sortIcon field="edrId"></p-sortIcon></th>
+                      <!-- <th pSortableColumn="edrId" style="width:20%">Request Code<p-sortIcon field="edrId"></p-sortIcon></th> -->
                       <th pSortableColumn="documenttitle" style="width:10%">Document Title<p-sortIcon field="documenttitle"></p-sortIcon></th>
                       <th pSortableColumn="documentno" style="width:10%">Document No. <p-sortIcon field="documentno"></p-sortIcon></th>
                       <th pSortableColumn="documenttype" style="width:10%">Document Type<p-sortIcon field="documenttype"></p-sortIcon></th>
@@ -50,7 +50,7 @@
               <ng-template pTemplate="body" let-existingdoc let-i="rowIndex">
                   <tr>  
                       <td>{{ i + 1 }}</td>  
-                      <td>{{existingdoc?.edrId}}</td>
+                      <!-- <td>{{existingdoc?.edrId}}</td> -->
                       <td>{{existingdoc?.documenttitle}}</td>
                       <td>{{existingdoc?.documentno}}</td>
                       <td>{{existingdoc?.documenttype}}</td>
