--- a/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
@@ -1,46 +1,43 @@
 <div class="container-fluid">
     <div class="row p-2">
         <div class="col">
-           
             <div class="d-flex justify-content-between align-items-center">
-                <h4 class="page-title flex-grow-1" >Document Requests </h4>
+                <h4 class="page-title flex-grow-1">Document Request</h4>
+
                 <div class="back-icon" style="margin-right: 10px;">
-                    <div class="back-icon" style="margin-right: 10px;">
-                        <a href="javascript:void(0);" onclick="history.back();">
-                            <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
-                        </a>
-                    </div>
-                 </div>
+                    <a href="javascript:void(0);" onclick="history.back();">
+                        <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+                    </a>
+                </div>
+                
                 <div class="d-flex page-title-actions">
-                 
-                  <div class="input-group">
-
-                    <input type="text" class="form-control" placeholder="Search">
-                        <span class="input-group-text"><i class="fas fa-search"></i></span>
-
-                      </div>
-                  <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()" *ngIf="access">New</button>
-                  <div class="back-icon" style="margin-right: 10px;">
+                    <div class="input-group custom-input-group">
+                        <!-- Magnifying glass icon -->
+                        <span class="input-group-text custom-input-group-text">
+                            <i class="fas fa-search custom-search-icon"></i>
+                        </span>
+                        <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                    </div>
+                      
+                    <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()" *ngIf="access">New</button>
                 </div>
-                </div>
-              </div>
+            </div>
         </div>
     </div>
     <div class="row p-2">
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
-                <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
                 <p-table #templatesTable [value]="requestsDatasource"
-               
+                 [globalFilterFields]="['drid', 'documenttype', 'department','documenttype','Workflow']"
                  tableStyleClass="table table-striped" [rows]="itemsPerPage"
-            [paginator]="true" [totalRecords]="requestsDatasource.length"
-            [rowsPerPageOptions]="rowsPerPageOptions" >
+                 [paginator]="true" [totalRecords]="requestsDatasource.length"
+                 [rowsPerPageOptions]="rowsPerPageOptions" >
                 <ng-template pTemplate="header">
                     <tr>
-                        <th>#</th>
+                        <th>S.No</th>
                         <th pSortableColumn="drid" style="width:20%">Request Code<p-sortIcon field="drid"></p-sortIcon></th>
-                        <th pSortableColumn="documenttype" style="width:10%">Document type <p-sortIcon field="documenttype"></p-sortIcon></th>
-                        <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
+                        <th pSortableColumn="documenttype" style="width:10%">Document Type<p-sortIcon field="documenttype"></p-sortIcon></th>
+                        <th pSortableColumn="department" style="width:15%">Department   <p-sortIcon field="department"></p-sortIcon></th>
                         <!-- <th pSortableColumn="modifiedBy" style="width:20%">Registered by<p-sortIcon field="modifiedBy"></p-sortIcon></th>
                         <th pSortableColumn="modifiedDate" style="width:200px">Registered On <p-sortIcon field="modifiedDate"></p-sortIcon></th> -->
                         <th pSortableColumn="Workflow" style="width:20%">Workflow<p-sortIcon field="workflow"></p-sortIcon></th>
@@ -78,7 +75,52 @@
                     </tr>
                 </ng-template>
             </p-table>
+            </div>
         </div>
     </div>
-    </div>
-</div>  
+</div>
+<style>
+    /* Styles for .custom-input-group */
+    .custom-input-group {
+        background-color: white;
+        display: flex;
+        align-items: center;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+    .custom-input-group-text {
+            background: white;
+            border: none;
+            padding: 0;
+            vertical-align: middle;
+        }
+
+        .custom-search-icon {
+            font-size: 14px;
+            margin-right: 5px;
+            margin-left: 9px;
+            color: #555;
+        }
+
+        .custom-input {
+            border: none;
+            padding: 5px;
+            vertical-align: middle;
+            background-color: white;
+            box-shadow: none;
+        }
+    </style>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
