--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -68,7 +68,7 @@
               <tr>
                 <td>{{ i + 1 }}</td>
                 <td>{{ docPreperation.documentno }}</td>
-                <td>{{ docPreperation.dpnid }}</td>
+                <td>{{ docPreperation.referenceId }}</td>
                 <td>{{ docPreperation.documenttitle }}</td>
                 <td>{{ docPreperation.documenttype }}</td>
                 <td>{{ docPreperation.department }}</td>
