--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-workflow/add-workflow.component.html
@@ -70,7 +70,7 @@
               >Document Stage<span style="color: red; font-weight: bolder;">*</span></label
             >
             <div class="col-sm-10">
-              <p-dropdown
+              <!-- <p-dropdown
                 name="workflowStage"
                 [options]="stageSource"
                 [(ngModel)]="workflow.documentstage"
@@ -80,7 +80,17 @@
                 [autoDisplayFirst]="false"
                 placeholder="Select Document Stage"
                 #documentstage="ngModel">
-              </p-dropdown>
+              </p-dropdown> -->
+              <p-multiSelect
+                [options]="stageSource"
+                [(ngModel)]="selectedStage"
+                placeholder="Select Document Stage"
+                name="workflowStage"
+                optionLabel="value"
+                display="chip"
+                [required]="true"
+                #documentstage="ngModel">
+              </p-multiSelect>
               <div *ngIf="documentstage.invalid && (documentstage.dirty || documentstage.touched)" class="text-danger">
                 Document Stage is required.
               </div>
