--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
@@ -49,7 +49,7 @@
                 <ng-template pTemplate="body" let-revision let-i="rowIndex">
                     <tr>  
                         <td>{{ i + 1 }}</td>  
-                        <td>{{revision?.atid}}</td>
+                        <td>{{revision?.referenceId}}</td>
                         <td>{{revision?.documentTitle}}</td>                        
                         <td>{{revision?.documentno}}</td>
                         <td>{{revision?.documentType}}</td>
