--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -82,7 +82,22 @@
             />
             </div>
           </div>
-
+          <div class="form-group row">
+            <label for="workflow" class="col-sm-2 col-form-label">Workflow</label>
+            <!-- <div class="col-sm-10">
+              <input type="text" class="form-control" id="Workflow" name="Workflow" [(ngModel)]="preparation.wokflow"
+                readonly [disabled]="viewMode"/>
+            </div> -->
+            <div class="col-sm-10">
+            <p-dropdown name="workflow" [options]="workflowsourcedata" [(ngModel)]="effective.workflow"
+            optionLabel="workflowName" optionValue="workflowName" [disabled]="viewMode || editMode" [required]="true"
+            [autoDisplayFirst]="false" #WorkFlowInput="ngModel">
+          </p-dropdown>
+            </div>
+          <div *ngIf="WorkFlowInput.invalid && (WorkFlowInput.dirty || WorkFlowInput.touched)" class="text-danger">
+            Workflow is required.
+          </div>
+          </div>
           <!-- <div class="form-group row">
             <label for="workflow" class="col-sm-2 col-form-label"
               >Workflow</label
