--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col d-flex justify-content-between align-items-center">
-      <h4 class="page-title"> New Document Preparation ({{preparation.dpnid}})</h4>
+      <h4 class="page-title"> New Document Preparation ({{preparation.referenceId}})</h4>
       <div class="back-icon" style="margin-right: 10px;">
         <a href="javascript:void(0);" onclick="history.back();">
           <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
@@ -101,9 +101,10 @@
               style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <p-dropdown name="template" [options]="templatesSource" [(ngModel)]="preparation.template"
-                optionLabel="Templatename" optionValue="Templatename" [disabled]="viewMode" [required]="true"
-                [autoDisplayFirst]="false" #templateInput="ngModel">
+                          optionLabel="Templatename" optionValue="Templatename" [disabled]="viewMode" [required]="true"
+                          [autoDisplayFirst]="false" #templateInput="ngModel">
               </p-dropdown>
+              <a class="col-sm-2 mx-2" *ngIf="preparation.template!=null && preparation.template!=undefined && preparation.template!='' && !viewMode" href="javascript:void(0)" (click)="edittemplate(preparation.template)">Modify</a>
               <div *ngIf="templateInput.invalid && (templateInput.dirty || templateInput.touched)" class="text-danger">
                 Template is required.
               </div>
