--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-revision/review-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-revision/review-revision.component.html
@@ -27,7 +27,7 @@
             <label for="reqCode" class="col-sm-2 col-form-label">Req Code</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="reqCode" name="reqCode" placeholder="System Generated"
-                [(ngModel)]="revision.atid" [disabled]="viewMode" readonly />
+                [(ngModel)]="revision.referenceId" [disabled]="viewMode" readonly />
             </div>
           </div>
 
@@ -113,7 +113,7 @@
           </div>
 
 
-          <div class="form-group row">
+          <!--<div class="form-group row">
             <label for="workflow" class="col-sm-2 col-form-label">Workflow<span
                 style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
@@ -125,7 +125,7 @@
                 Workflow is required.
               </div>
             </div>
-          </div>
+          </div>-->
 
 
           <div class="form-group row my-4">
